cpp/food-chain/run-tests-cpp.txt
Running automated test file(s):


===============================================================================

Running: make clean
rm -rf ./build

real	0m0.007s
user	0m0.000s
sys	0m0.006s

===============================================================================

export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"

===============================================================================

Running: make coverage | ansifilter
rm -rf ./build
mkdir -pv ./build
mkdir: created directory './build'

cd ./build; export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"; cmake -DEXERCISM_RUN_ALL_TESTS=1 -DCMAKE_EXPORT_COMPILE_COMMANDS=1 -G 'Unix Makefiles' ../; if make; then printf "\n=== All Tests Passed ===\n"; else printf "\n=== Test Failure ===\n"; false; fi
-- The CXX compiler identification is GNU 10.2.1
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Configuring done
-- Generating done
-- Build files have been written to: /home/vpayno/git_vpayno/exercism-workspace/cpp/food-chain/build
make[1]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/food-chain/build'
make[2]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/food-chain/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/food-chain/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/food-chain/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/food-chain/build'
[ 25%] Building CXX object CMakeFiles/food-chain.dir/food_chain_test.cpp.o
[ 50%] Building CXX object CMakeFiles/food-chain.dir/food_chain.cpp.o
[ 75%] Building CXX object CMakeFiles/food-chain.dir/test/tests-main.cpp.o
[100%] Linking CXX executable food-chain
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/food-chain/build'
[100%] Built target food-chain
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/food-chain/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/food-chain/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/food-chain/build'
===============================================================================
All tests passed (10 assertions in 10 test cases)

make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/food-chain/build'
[100%] Built target test_food-chain
make[2]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/food-chain/build'
make[1]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/food-chain/build'

=== All Tests Passed ===

find . -regextype posix-egrep -regex '^.*(tests-main|CompilerId).*[.](gcda|gcno)$' -print -delete
./build/CMakeFiles/3.22.2/CompilerIdCXX/CMakeCXXCompilerId.gcno
./build/CMakeFiles/food-chain.dir/test/tests-main.cpp.gcno
./build/CMakeFiles/food-chain.dir/test/tests-main.cpp.gcda

find . -regextype posix-egrep -regex '^.*[.](gcda|gcno)$'
./build/CMakeFiles/food-chain.dir/food_chain_test.cpp.gcno
./build/CMakeFiles/food-chain.dir/food_chain.cpp.gcno
./build/CMakeFiles/food-chain.dir/food_chain.cpp.gcda
./build/CMakeFiles/food-chain.dir/food_chain_test.cpp.gcda

gcovr --print-summary
------------------------------------------------------------------------------
                           GCC Code Coverage Report
Directory: .
------------------------------------------------------------------------------
File                                       Lines    Exec  Cover   Missing
------------------------------------------------------------------------------
food_chain.cpp                                21      20    95%   9
food_chain_test.cpp                           39      39   100%   
test/catch.hpp                                32      27    84%   1642-1643,2227,2229,2560
------------------------------------------------------------------------------
TOTAL                                         92      86    93%
------------------------------------------------------------------------------
lines: 93.5% (86 out of 92)
branches: 41.9% (104 out of 248)

real	0m10.616s
user	0m9.725s
sys	0m0.823s

===============================================================================

cmake-format --in-place CMakeLists.txt
WARNING config_util.py:307: The following configuration options were ignored:
  max_subargs_per_line

real	0m0.165s
user	0m0.113s
sys	0m0.053s

===============================================================================

cmake-lint CMakeLists.txt
WARNING The following configuration options were ignored:
  max_subargs_per_line
CMakeLists.txt
==============
CMakeLists.txt:15,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:17,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:61,02: [C0113] Missing COMMENT in statement which allows it

Summary
=======
files scanned: 1
found lint:
  Convention: 3


real	0m0.174s
user	0m0.123s
sys	0m0.052s

===============================================================================

Running: clang-format-16 -style=file -i ./food_chain.cpp ./food_chain_test.cpp ./food_chain.h

real	0m0.028s
user	0m0.016s
sys	0m0.012s

===============================================================================

Running: ../../.github/citools/cpp/clang-check
clang-check-16 --analyze ./food_chain.cpp ./food_chain_test.cpp ./food_chain.h
error: argument unused during compilation: '-stdlib=libstdc++' [-Werror,-Wunused-command-line-argument]
error: invalid argument '-std=c++17' not allowed with 'C'
/home/vpayno/git_vpayno/exercism-workspace/cpp/food-chain/food_chain.h:4:10: fatal error: 'sstream' file not found
#include <sstream>
         ^~~~~~~~~
1 error generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/food-chain/food_chain.h.

real	0m1.988s
user	0m1.914s
sys	0m0.073s


real	0m1.989s
user	0m1.915s
sys	0m0.074s

===============================================================================

Running: ../../.github/citools/cpp/clang-tidy | head -n 100
16666 warnings generated.
52905 warnings generated.
52905 warnings and 3 errors generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/food-chain/food_chain.h.
Suppressed 52910 warnings (52904 in non-user code, 6 NOLINT).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
Found compiler error(s).

real	0m9.492s
user	0m9.375s
sys	0m0.115s
Running: clang-tidy-16 ./food_chain.cpp ./food_chain_test.cpp ./food_chain.h
error: invalid argument '-std=c++17' not allowed with 'C' [clang-diagnostic-error]
error: argument unused during compilation: '-stdlib=libstdc++' [clang-diagnostic-unused-command-line-argument]
/home/vpayno/git_vpayno/exercism-workspace/cpp/food-chain/food_chain.h:4:10: error: 'sstream' file not found [clang-diagnostic-error]
#include <sstream>
         ^~~~~~~~~
/home/vpayno/git_vpayno/exercism-workspace/cpp/food-chain/food_chain_test.cpp:11:5: warning: variable 'expected' of type 'string' (aka 'basic_string<char>') can be declared 'const' [misc-const-correctness]
    string expected =
    ^
           const 


real	0m9.494s
user	0m9.375s
sys	0m0.118s

===============================================================================

